--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -109,6 +109,9 @@
                                                         <div class="toolbar">
                                                             <!--        Here you can write extra buttons/actions for the toolbar              -->
                                                         </div>
+                                                        <button class="btn btn-social btn-link btn-tumblr" id="btnReportPDF">
+                                                            <i class="fa fa-tumblr-square"></i> Repost
+                                                        </button>
                                                         <div class="fresh-datatables">
                                                             <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%">
                                                                 <thead>
