--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -109,9 +109,16 @@
                                                         <div class="toolbar">
                                                             <!--        Here you can write extra buttons/actions for the toolbar              -->
                                                         </div>
-                                                        <button class="btn btn-social btn-link btn-tumblr" id="btnReportPDF">
-                                                            <i class="fa fa-tumblr-square"></i> Repost
-                                                        </button>
+                                                        <div class="row">
+                                                            <div class="col-md-12 text-right text-right">
+                                                                  
+                                                                <button class="btn btn-social btn-tumblr btn-link" id="btnReportPDF">
+                                                                <i class="fas fa-file-pdf"></i> Exportar en PDF
+                                                                </button>
+                                                            </div>
+                                                            
+                                                        </div>
+                                                       
                                                         <div class="fresh-datatables">
                                                             <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%">
                                                                 <thead>
