--- a/PMCTool.App/Views/Shared/_LayoutReportSct.cshtml
+++ b/PMCTool.App/Views/Shared/_LayoutReportSct.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using PMCTool.App.Helpers.Html;
+@{
     var userName = Context.Request.Cookies["pmctool-name-app"];
     var userImage = Context.Request.Cookies["pmctool-avatar-app"];
     var envImage = Context.Request.Cookies["pmctool-envlogo-app"];
@@ -20,7 +21,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootstrap-select.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/sweetalert2.min.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/light-bootstrap-dashboard.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/light-bootstrap-dashboard-sct.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/pmctool.css" asp-append-version="true" /> 
      <link href="~/css/detalle-actividad.css" rel="stylesheet" />
     <link href="~/css/indicadores.css" rel="stylesheet" />
@@ -34,7 +35,7 @@
     <script src="~/js/plugins/bootstrap-select.js" asp-append-version="true"></script>
     <script src="~/js/plugins/jquery.spin.js" asp-append-version="true"></script>
     <script src="~/js/plugins/toastr.js" asp-append-version="true"></script>
-    <script src="~/js/plugins/chart/Chart.min.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" asp-append-version="true"></script> 
     <script src="~/js/plugins/highcharts/highcharts.js" asp-append-version="true"></script>
 
 
